chore: seperated multi nodes config for nginx