@@ -17,19 +17,20 @@ import org.springframework.util.CollectionUtils;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.regex.Pattern;
 
-import static com.axonivy.market.constants.PreviewConstants.PREVIEW_DIR;
+import static com.axonivy.market.constants.CommonConstants.IMAGE_EXTENSION;
 
 @Service
 @Log4j2
 @AllArgsConstructor
 public class ImageServiceImpl implements ImageService {
+
+  private static final Pattern IMAGE_EXTENSION_PATTERN = Pattern.compile(IMAGE_EXTENSION);
 
   private final ImageRepository imageRepository;
   private final FileDownloadService fileDownloadService;
@@ -61,7 +62,7 @@ public class ImageServiceImpl implements ImageService {
         List<Image> imagesToDelete = existedImages.subList(1, existedImages.size());
         imageRepository.deleteAll(imagesToDelete);
       }
-      return existedImages.get(0);
+      return existedImages.getFirst();
     }
 
     String currentImageUrl = GitHubUtils.getDownloadUrl(ghContent);
@@ -107,29 +108,4 @@ public class ImageServiceImpl implements ImageService {
   public byte[] readImage(String id) {
     return imageRepository.findById(id).map(Image::getImageData).orElse(null);
   }
-
-  @Override
-  public byte[] readPreviewImageByName(String imageName) {
-    var previewPath = Paths.get(PREVIEW_DIR);
-    if (!Files.exists(previewPath) || !Files.isDirectory(previewPath)) {
-      log.info("#readPreviewImageByName: Preview folder not found");
-    }
-    try {
-      Optional<Path> imagePath = Files.walk(previewPath)
-          .filter(Files::isRegularFile)
-          .filter(path -> path.getFileName().toString().equalsIgnoreCase(imageName))
-          .findFirst();
-      if (imagePath.isEmpty()) {
-        log.info("#readPreviewImageByName: Image with name {} is missing", imageName);
-        return new byte[0];
-      }
-      InputStream contentStream = MavenUtils.extractedContentStream(imagePath.get());
-        assert contentStream != null;
-        return IOUtils.toByteArray(contentStream);
-    } catch (IOException e) {
-      log.error("#readPreviewImageByName: Error when read preview image {}: {}", imageName, e.getMessage());
-      return new byte[0];
-    }
-  }
-
 }
